# rdd-copy

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  doxygen.mk  rdd.doxyfile  rdd.pc.in  rdd.spec.in
m4/: CREATE_REPORT.m4  ac_create_generic_config.m4  check_zlib.m4  doxygen.m4  nfi_cflags.m4  nfi_debug.m4
src/: Makefile.am  Makefile.in  alignedbuf.c  atomicreader.c  bcastprinter.c  checksumblockfilter.c  commandline.c  commandline.h  copier.c  copier.h  error.c  ewfwriter.c  faultyreader.c  fdreader.c  fdwriter.c  fileprinter.c  filereader.c  filewriter.c  filter.c  filter.h  filterset.c  hashcontainer.c  hashcontainer.h  logprinter.c  md5blockfilter.c  md5streamfilter.c  msgprinter.c  msgprinter.h  netio.c  netio.h  numparser.c  outfile.c  partwriter.c  progress.c  progress.h  rdd-copy.1  rdd-verify.1  rdd.1  rdd.h  rdd_internals.c  (+20 more)
test/: Makefile.am  Makefile.in  core_writer.c  existing_file.E01  image.img  mockblockfilter.c  mockblockfilter.h  mockcopier.c  mockcopier.h  mockprinter.c  mockprinter.h  mockreader.c  mockreader.h  mockstreamfilter.c  mockstreamfilter.h  netio_info  netio_info_empty_filename  netio_info_filename_len_0  netio_info_filename_len_too_long  netio_info_filename_not_terminated  rddtest.h  simpletestfile.txt  tatomicreader.c  tbcastprinter.c  tbuildtestfile.c  tchecksumblockfilter.c  tcommandline.c  tcopier.c  testhelper.h  tewfwriter.c  tfaultyreader.c  tfdwriter.c  tfilewriter.c  tfilter.c  thashcontainer.c  tmain.c  tmd5streamfilter.c  tmsgprinter.c  tmsgprinter.sh.in  tnetio.c  (+17 more)
test/tools/: rfile-cat
